test/invalid/test5.sl
integer x; x := 5 @ 3;